--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       name="twitter:description"
       content="Frontend Developer from Saudi Arabia, building beautiful, interactive, and accessible web experiences with React and Tailwind CSS." />
     <meta name="twitter:image" content="/src/assets/space-tourism-website.png" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <link rel="stylesheet" href="/src/App.css" />
   </head>
   <body>
